--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.08.2022 09:16:57</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.08.2022 09:40:06</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -14,35 +14,42 @@
 						</span>
 </p>
 <p>
-<strong>Bílá Česneková s bramborem a hovězím masem</strong>
+<strong>Kmínová s vejcem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Hovězí s koprovou omáčkou a vařeným bramborem NEBO houskovým knedlíkem</strong>
+<strong>Vepřové výpečky se špenátem a bramborovým knedlíkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							145,-
 						</span>
 </p>
 <p>
-<strong>Špagety bolognesse s parmazánem</strong>
+<strong>Zapečené brambory s uzeným masem, okurkou NEBO řepou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							139,-
+						</span>
+</p>
+<p>
+<strong>Míchaný salát se smazanými kuřecími stripsy</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							141,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: opecene brambory, Tilapie s rajčaty a žampiony, Vepřový plátek s cibuloviu omáčkou, ryze, zelenina</strong>
+<strong>TEPLÝ BUFET: Tilapie na dýni, asijské kuřecí nudličky, zelenina, rýže, pečený brambor</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: kuskus se sušenými rajčaty a bylinkami, Míchaný, ledový salát s paprikový dresinkem</strong>
+<strong>SALÁTY: kuskus se sušenými rajčaty, tzatziki, zelenina s chilli dresinkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
