--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.08.2022 10:44:15</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.08.2022 11:12:17</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -58,6 +58,59 @@
 </div>
 </td>
 </tr>
+<table>
+<tr><th>KUTA<br><a href="https://www.menicka.cz/4728-kuta-restaurace-.html">https://www.menicka.cz/4728-kuta-restaurace-.html</a></th></tr>
+<tr>
+<td>
+<div class="menicka">
+<div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
+<div class="nadpis">Úterý 23.8.2022</div>
+<ul>
+<li class="poznamka">
+<div class="polozka">Čokoládová roláda s banánem a oříšky  (bez lepku) </div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Mrkvový dort</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s červeným rybízem a tvarohem</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Kuřecí vývar se zeleninou v menu  <em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Kuřecí vývar se zeleninou samostatně <em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Vepřová panenka, gratinované brambory, švestková omáčka, marinovaná cuketa <em title="Mléko">7</em></div>
+<div class="cena">169 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Smažená rýže, kuřecí prso na zázvoru, mungo fazole, jarní cibulka, koriandr, mrkev, ředkev <em title="Vejce">3</em><em title="Ryby">4</em><em title="Sójové boby (sója)">6</em><em title="Celer">9</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Ricottové ravioli, parmazán, smetanová omáčka, bylinky, olivy, polníček <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
+</div>
+</td>
+</tr>
+</table>
 <table>
 <tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
