--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.08.2022 08:17:09</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.08.2022 08:48:14</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -124,7 +124,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy jihocesky pstruh s horcicnym maslem, stouchane brambory s porkem, salatek 155</li><li>Smazena cerstva tmava treska, stouchane brambory s porkem, salatek z cervene repy, citron {L} 179</li><li>Libanonsky wrap s opekanym hovezim masem, cibulkou a humusem, pecena chilli dyne, salatek {L} 155</li><li>Uzena koroptvi prsicka na luzku z pecenych cuket, pikanti fazole se zeleninou, salatek 179</li><li>Indicka zeleninova pakora {cizrnove smazenky – dyne, papriky, cibule}, korenena ryze, jogurtova rajta, salatek 155</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s omackou salsa verde, zeleninovy kuskus, ratatouille z pecene letni zeleniny {L} 155</li><li>Pecene velke cerstve spanelske sardinky s citronem a omackou salsa verde, zeleninovy kuskus, ratatouille z pecene letni zeleniny {L} 179</li><li>Kruti medailonky po jihoindicku v citronove omacce s kokosovym mlekem, jasminova ryze, salatek 155</li><li>Smazeny kanci holandsky rizek s goudou, petrzelkou a spetkou muskatu, stouchane brambory se zelenou cibulkou, korejsky mrkvovy salat {L} 175</li><li>Zeleninovy nasi goreng – indoneska smazena ryze s grilovanym tempehem a vajecnymi omeletkami, salatek 155</li></ol>
 </td>
 </tr>
 </table>
