--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.08.2022 09:11:13</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.08.2022 09:36:54</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -14,42 +14,42 @@
 						</span>
 </p>
 <p>
-<strong>Kmínová s vejcem</strong>
+<strong>Zeleninová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Vepřové výpečky se špenátem a bramborovým knedlíkem</strong>
+<strong>Smažený sýr s vařeným bramborem a tatarkou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							143,-
+						</span>
+</p>
+<p>
+<strong>Hovězí kostky na kmíně s rýží NEBO těstovinou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							145,-
 						</span>
 </p>
 <p>
-<strong>Zapečené brambory s uzeným masem, okurkou NEBO řepou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							139,-
-						</span>
-</p>
-<p>
-<strong>Míchaný salát se smazanými kuřecími stripsy</strong>
+<strong>Míchaný salát s marinovanými vepřovými nudličkami a bagetkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							141,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: Tilapie na dýni, asijské kuřecí nudličky, zelenina, rýže, pečený brambor</strong>
+<strong>TEPLÝ BUFET: opecene brambory, kari kebab, zelenina, ryze, Tilapie se slaninou na rajcatech</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: kuskus se sušenými rajčaty, tzatziki, zelenina s chilli dresinkem</strong>
+<strong>SALÁTY: Míchaný s jogurtem a kopcem, ledový salát s hořčičným dresinkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
